[gd_scene load_steps=3 format=3 uid="uid://bwtn0fjpmt22g"]

[ext_resource type="Script" path="res://world/area/area_handler/transition_point.gd" id="1_vrg17"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j38q"]
size = Vector2(16, 37)

[node name="TransitionPoint" type="Area2D" groups=["transition_point"]]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_vrg17")

[node name="PlayerPosition" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6j38q")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
